# recurve

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data_model.md
docs/brand/: README.md
infra/postgres/: init.sql
pipeline/ingest/: README.md  __init__.py  seed_billing.py  stripe_source.py
pipeline/ml/: README.md  __init__.py  score.py  train.py
pipeline/orchestration/: README.md
pipeline/orchestration/recurve_orchestration/: __init__.py  definitions.py
pipeline/orchestration/tests/: test_definitions.py
pipeline/transform/recurve/: README.md  dbt_project.yml  profiles.yml
pipeline/transform/recurve/models/staging/: _recurve__sources.yml
services/api/: README.md
services/api/app/: __init__.py  config.py  main.py
services/api/tests/: test_health.py
web/src/app/: globals.css  layout.tsx  page.tsx
