[project]
name = "recurve"
version = "0.1.0"
description = "Recurve — multi-tenant subscription-analytics data platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  # ingestion
  "dlt[duckdb]>=1.5",
  "stripe>=10.0",
  # transformation (local warehouse is duckdb; bigquery added for the live deploy)
  "dbt-core>=1.8",
  "dbt-duckdb>=1.8",
  # orchestration
  "dagster>=1.8",
  "dagster-webserver>=1.8",
  "dagster-dbt>=0.24",
  # churn model
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "numpy>=1.26",
  "duckdb>=1.1",
  # data api
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  # app metadata db + secrets
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "cryptography>=42",
  # misc
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "sqlfluff>=3.1",
  "pytest>=8.2",
  "pre-commit>=3.7",
]

# monorepo root: install dependencies into a shared .venv but don't build
# this directory as a package.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["pipeline/transform", "**/target", "**/.dlt"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["services", "pipeline"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--import-mode=importlib"
# the orchestration package loads as a top-level module (matching `dagster dev`)
pythonpath = ["pipeline/orchestration"]
